[package]
name = "rust_to_blender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = "0.11.1"

[lib]
path = "rust_to_blender/lib.rs"

[[bin]]
name = "main"
path = "rust_to_blender/bin/main.rs"